新增"出版品分類"各選項

--- a/upload.html
+++ b/upload.html
@@ -173,39 +173,512 @@
 		  </div>
 	  </div>
     </div>
-  </div>	
+  </div>
+
   <div>
 	<div class="text-center col-md-12">
 		<h4>類型</h4>
-		<div class="">
-		  	<label class="checkarea">食
-			  <input type="checkbox" checked="checked">
-			  <span class="checkmark"></span>
-			</label>
-			<label class="checkarea">衣
-			  <input type="checkbox">
-			  <span class="checkmark"></span>
-			</label>
-			<label class="checkarea">住
-			  <input type="checkbox">
-			  <span class="checkmark"></span>
-			</label>
-			<label class="checkarea">行
-			  <input type="checkbox">
-			  <span class="checkmark"></span>
-			</label>
-			<label class="checkarea">育
-			  <input type="checkbox">
-			  <span class="checkmark"></span>
-			</label>
-			<label class="checkarea">樂
-			  <input type="checkbox">
-			  <span class="checkmark"></span>
-			</label>
+		<div class="row">
+			<div class="col-md-12 row">
+				<div class="col-md-4">
+					<label class="checkarea">食
+					  <input type="checkbox">
+					  <span class="checkmark"></span>
+					</label>
+				</div>
+				<div class="col-md-8">
+					<div class="row">
+						<div class="col-md-4">
+							<label class="checkarea">魚乾
+							  <input type="checkbox">
+							  <span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-8 row">
+							<div class="col-sm-6">
+								<label class="checkarea">臭肉魚乾
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">象魚乾
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">石鮔乾
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<label class="checkarea">菜乾
+							  <input type="checkbox">
+							  <span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-8 row">
+							<div class="col-sm-6">
+								<label class="checkarea">高麗菜乾
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">高麗菜酸
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">花菜乾
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">酸瓜
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">海菜/紫菜
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<label class="checkarea">產物
+							  <input type="checkbox">
+							  <span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-8 row">
+							<div class="col-sm-6">
+								<label class="checkarea">番薯
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">花生
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">高粱
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<label class="checkarea">海產
+							  <input type="checkbox">
+							  <span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-8 row">
+							<div class="col-sm-6">
+								<label class="checkarea">春
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">夏
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">秋
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">冬
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<label class="checkarea">庶民小吃
+							  <input type="checkbox">
+							  <span class="checkmark"></span>
+							</label>
+							<label class="checkarea">節慶民俗食物
+							  <input type="checkbox">
+							  <span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-8 row">
+							<div class="col-sm-6">
+								<label class="checkarea">炸棗
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">菜繭
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">雞母狗
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">家禽家畜
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+							<div class="col-sm-6">
+								<label class="checkarea">餐廳
+								  <input type="checkbox">
+								  <span class="checkmark"></span>
+								</label>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12 row">
+				<div class="col-md-4">
+					<label class="checkarea">衣
+					  <input type="checkbox">
+					  <span class="checkmark"></span>
+					</label>
+				</div>
+				<div class="col-md-8">
+					<div class="row">
+						<div class="col-md-6">
+							<label class="checkarea">蒙面女郎
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-6">
+							<label class="checkarea">草鞋
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12 row">
+				<div class="col-md-4">
+					<label class="checkarea">住
+					  <input type="checkbox">
+					  <span class="checkmark"></span>
+					</label>
+				</div>
+				<div class="col-md-8">
+					<div class="row">
+						<div class="col-md-4">
+							<label class="checkarea">傳統民宅
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">日據洋樓
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">現代建築
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-8">
+							<label class="checkarea">官方歷史建物
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">砲台
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">眷村
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">古蹟
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">菜宅
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">石滬
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">抱礅
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">聚落
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">燈塔
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12 row">
+				<div class="col-md-4">
+					<label class="checkarea">行
+					  <input type="checkbox">
+					  <span class="checkmark"></span>
+					</label>
+				</div>
+				<div class="col-md-8">
+					<div class="row">
+						<div class="col-md-4">
+							<label class="checkarea">舢舨
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">漁船
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">離阿甲
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">牛車
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">碼頭
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">漁港
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">橋梁
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">車站
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">機場
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12 row">
+				<div class="col-md-4">
+					<label class="checkarea">育
+					  <input type="checkbox">
+					  <span class="checkmark"></span>
+					</label>
+				</div>
+				<div class="col-md-8">
+					<div class="row">
+						<div class="col-md-4">
+							<label class="checkarea">各級學校
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">書院
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">武轎
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-8">
+							<label class="checkarea">涼傘等各類才藝協會
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">畫會
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">詩社
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">球類
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-12 row">
+				<div class="col-md-4">
+					<label class="checkarea">樂
+					  <input type="checkbox">
+					  <span class="checkmark"></span>
+					</label>
+				</div>
+				<div class="col-md-8">
+					<div class="row">
+						<div class="col-md-4">
+							<label class="checkarea">廟會
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">景點
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">名勝
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">軍中樂園
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">澡堂
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">戲院
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">夜市
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">童玩
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">賭博
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">飲宴
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">婚喪喜慶
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+						<div class="col-md-4">
+							<label class="checkarea">褒歌
+								<input type="checkbox">
+								<span class="checkmark"></span>
+							</label>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
   </div>
-  <hr>
+<hr>
   <div class="row">
     <div class="col-sm-12 text-center">
       <h5>標籤</h5>
