--- a/upload.html
+++ b/upload.html
@@ -121,23 +121,23 @@
       <div class="form-group row"><!--class="text-center form-control"form-group row-->
 		<label class="col-sm-4 col-form-label">書籍名稱</label>
 			<div class="col-sm-8">
-				<input type="text" class="form-control" id="" placeholder="">
+				<input type="text" class="form-control fineTuneTopInput" id="" placeholder="">
 			</div>
 			<label class="col-sm-4 col-form-label">作者/編者</label>
 			<div class="col-sm-8">
-				<input type="text" class="form-control" id="">
+				<input type="text" class="form-control fineTuneTopInput" id="">
 			</div>
 			<label class="col-sm-4 col-form-label">出版年月</label>
 			<div class="col-sm-8">
-				<input type="text" class="form-control" id="datepicker">
+				<input type="text" class="form-control fineTuneTopInput" id="datepicker">
 			</div> 
 		    <label class="col-sm-4 col-form-label">出版地</label>
 			<div class="col-sm-8">
-				<input type="text" class="form-control" id="">
+				<input type="text" class="form-control fineTuneTopInput" id="">
 			</div>
 		    <label class="col-sm-4 col-form-label">ISBN</label>
 			<div class="col-sm-8">
-				<input type="text" class="form-control" id="">
+				<input type="text" class="form-control fineTuneTopInput" id="">
 			</div>
 	  </div>
     </div>
