--- a/upload.html
+++ b/upload.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark co-blue">
   <a class="navbar-brand" href="index.html">首頁</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -27,6 +27,12 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="unit.html">單位列表</a>
+      </li>
+	  <li class="nav-item">
+        <a class="nav-link" href="detail.html">詳細資料</a>
+      </li>
+	  <li class="nav-item">
+        <a class="nav-link" href="unitSetting.html">設定</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="login.html">登入</a>
