--- a/detail.html
+++ b/detail.html
@@ -11,21 +11,27 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark co-blue">
   <a class="navbar-brand" href="index.html">首頁</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="inventory.html">檔案列表</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="unit.html">單位列表</a>
+      </li>
+	  <li class="nav-item">
+        <a class="nav-link" href="detail.html">詳細資料</a>
+      </li>
+	  <li class="nav-item">
+        <a class="nav-link" href="unitSetting.html">設定</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="login.html">登入</a>
@@ -42,80 +48,41 @@
   <hr>
 </div>
 
-<div class="container-fluid">
+<div class="container col-md-6">
+  <h3>檔案詳細列表</h3>
   <hr>
-  <h3>上傳檔案列表</h3>
-  <div class="row">
-    <div class="text-center col-md-12">
-        <table class="table">
-		  <thead class="thead-dark">
-			<tr>
-			  <th scope="col">#</th>
-			  <th scope="col">出版品型態</th>
-			  <th scope="col">描述</th>
-			  <th scope="col">書籍名稱</th>
-			  <th scope="col">作者/編者</th>
-			  <th scope="col">出版年月</th>
-			  <th scope="col">出版地</th>
-			  <th scope="col">ISBN</th>
-			  <th scope="col">授權(費用)</th>
-			  <th scope="col">類型</th>
-			  <th scope="col">標籤</th>
-			  <th scope="col">上傳日期</th>
-			  <th scope="col">檔案下載</th>
-			</tr>
-		  </thead>
-		  <tbody>
-			<tr>
-			  <th scope="row">1</th>
-			  <td>全文電子檔</td>
-			  <td>闡述文化內容</td>
-			  <td>澎湖文化</td>
-			  <td>王大明</td>
-			  <td>2015/8</td>
-			  <td>澎湖縣</td>
-			  <td>XXXXXXXXXX-X</td>
-			  <td>是,5000</td>
-			  <td>食,住</td>
-			  <td>#抱礅#海#石滬</td>
-			  <td>2018/05/20</td>
-			  <td><a href="#">下載</a></td>
-			</tr>
-			<tr>
-			  <th scope="row">2</th>
-			  <td>全文電子檔</td>
-			  <td>闡述文化內容</td>
-			  <td>澎湖文化</td>
-			  <td>王大明</td>
-			  <td>2015/8</td>
-			  <td>澎湖縣</td>
-			  <td>XXXXXXXXXX-X</td>
-			  <td>是,5000</td>
-			  <td>食,住</td>
-			  <td>#抱礅#海#石滬</td>
-			  <td>2018/05/20</td>
-			  <td><a href="#">下載</a></td>
-			</tr>
-			<tr>
-			  <th scope="row">3</th>
-			  <td>全文電子檔</td>
-			  <td>闡述文化內容</td>
-			  <td>澎湖文化</td>
-			  <td>王大明</td>
-			  <td>2015/8</td>
-			  <td>澎湖縣</td>
-			  <td>XXXXXXXXXX-X</td>
-			  <td>是,5000</td>
-			  <td>食,住</td>
-			  <td>#抱礅#海#石滬</td>
-			  <td>2018/05/20</td>
-			  <td><a href="#">下載</a></td>
-			</tr>
-		  </tbody>
-		</table>
+  <div class="">
+    <div class="row col-sm-8">
+      <div class="col-sm-6">
+		  <p><strong>出版品型態</strong></p>
+		  <p><strong>描述</strong></p>
+		  <p><strong>書籍名稱</strong></p>
+		  <p><strong>作者/編者</strong></p>
+		  <p><strong>出版年月</strong></p>
+		  <p><strong>出版地</strong></p>
+		  <p><strong>ISBN</strong></p>
+		  <p><strong>授權(費用)</strong></p>
+		  <p><strong>類型</strong></p>
+		  <p><strong>標籤</strong></p>
+		  <p><strong>上傳日期</strong></p>
+		  <p><strong>檔案下載</strong></p>
+	  </div>
+	  <div class="col-sm-6">
+		  <p>全文電子檔</p>
+		  <p>闡述文化內容</p>
+		  <p>澎湖文化</p>
+		  <p>王大明</p>
+		  <p>2015/8</p>
+		  <p>澎湖縣</p>
+		  <p>XXXXXXXXXX-X</p>
+		  <p>是,5000</p>
+		  <p>食,住</p>
+		  <p>#抱礅#海#石滬</p>
+		  <p>2018/05/20</p>
+		  <p><a href="#">下載</a></p>
+	  </div>
     </div>
   </div>
-  <hr>
   <div class="row">
     <div class="text-center col-md-12 col-md-offset-3">
       <p>Copyright &copy; 2018 &middot; IDELab </p>
