--- a/upload.html
+++ b/upload.html
@@ -43,7 +43,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">「澎湖民藝復興計畫」盤點網BBB</h1>
+      <h1 class="text-center">「澎湖民藝復興計畫」盤點網</h1>
     </div>
   </div>
   <hr>
@@ -186,7 +186,7 @@
 		<h4>類型</h4>
 		<div class="row">
 			<div class="col-md-12 row">
-				<div class="col-md-4">
+				<div class="col-md-4 co-yellow">
 					<label class="checkarea">食
 					  <input type="checkbox">
 					  <span class="checkmark"></span>
@@ -194,7 +194,7 @@
 				</div>
 				<div class="col-md-8">
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-4 co-yellow-light">
 							<label class="checkarea">魚乾
 							  <input type="checkbox">
 							  <span class="checkmark"></span>
