--- a/inventory.html
+++ b/inventory.html
@@ -11,21 +11,27 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark co-blue">
   <a class="navbar-brand" href="index.html">首頁</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="inventory.html">檔案列表</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="unit.html">單位列表</a>
+      </li>
+	  <li class="nav-item">
+        <a class="nav-link" href="detail.html">詳細資料</a>
+      </li>
+	  <li class="nav-item">
+        <a class="nav-link" href="unitSetting.html">設定</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="login.html">登入</a>
@@ -78,12 +84,8 @@
 			<tr>
 			  <th scope="col">#</th>
 			  <th scope="col">出版品型態</th>
-			  <th scope="col">描述</th>
-			  <th scope="col">出版品名</th>
-			  <th scope="col">作者/編者</th>
-			  <th scope="col">出版年</th>
-			  <th scope="col">類型</th>
-			  <th scope="col">標籤</th>
+			  <th scope="col">出版品名稱</th>
+			  <th scope="col">出版年月</th>
 			  <th scope="col">上傳日期</th>
 			  <th scope="col">檔案下載</th>
 			</tr>
@@ -92,36 +94,24 @@
 			<tr>
 			  <th scope="row">1</th>
 			  <td>全文電子檔</td>
-			  <td>闡述文化內容</td>
 			  <td>澎湖文化</td>
-			  <td>王大明</td>
-			  <td>2015</td>
-			  <td>食,住</td>
-			  <td>#抱礅#海#石滬</td>
+			  <td>2015/5</td>
 			  <td>2018/05/20</td>
 			  <td><a href="#">下載</a></td>
 			</tr>
 			<tr>
 			  <th scope="row">2</th>
 			  <td>全文電子檔</td>
-			  <td>闡述文化內容</td>
 			  <td>澎湖文化</td>
-			  <td>王大明</td>
-			  <td>2015</td>
-			  <td>食,住</td>
-			  <td>#抱礅#海#石滬</td>
+			  <td>2015/5</td>
 			  <td>2018/05/20</td>
 			  <td><a href="#">下載</a></td>
 			</tr>
 			<tr>
 			  <th scope="row">3</th>
 			  <td>全文電子檔</td>
-			  <td>闡述文化內容</td>
 			  <td>澎湖文化</td>
-			  <td>王大明</td>
-			  <td>2015</td>
-			  <td>食,住</td>
-			  <td>#抱礅#海#石滬</td>
+			  <td>2015/5</td>
 			  <td>2018/05/20</td>
 			  <td><a href="#">下載</a></td>
 			</tr>
