--- a/unit.html
+++ b/unit.html
@@ -11,21 +11,27 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark co-blue">
   <a class="navbar-brand" href="index.html">首頁</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="upload.html">上傳檔案</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="inventory.html">檔案列表</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="unit.html">單位列表</a>
+      </li>
+	  <li class="nav-item">
+        <a class="nav-link" href="detail.html">詳細資料</a>
+      </li>
+	  <li class="nav-item">
+        <a class="nav-link" href="unitSetting.html">設定</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="login.html">登入</a>
@@ -51,9 +57,6 @@
 			  <th scope="col">#</th>
 			  <th scope="col">分類</th>
 			  <th scope="col">單位名稱</th>
-			  <th scope="col">設立年代</th>
-			  <th scope="col">負責人</th>
-			  <th scope="col">電話</th>
 			  <th scope="col">所有文件數</th>
 			  <th scope="col">已上傳數量</th>
 			  <th scope="col">最近更新時間</th>
@@ -64,9 +67,6 @@
 			  <th scope="row">1</th>
 			  <td>分類A</td>
 			  <td>單位A</td>
-			  <td>1985</td>
-			  <td>王大明</td>
-			  <td>06-9876630</td>
 			  <td>2</td>
 			  <td>2</td>
 			  <td>2018/05/03 17:50</td>
@@ -75,9 +75,6 @@
 			  <th scope="row">2</th>
 			  <td>分類B</td>
 			  <td>單位B</td>
-			  <td>1985</td>
-			  <td>王大明</td>
-			  <td>06-9876653</td>
 			  <td>5</td>
 			  <td>4</td>
 			  <td>2018/05/03 17:50</td>
@@ -86,9 +83,6 @@
 			  <th scope="row">3</th>
 			  <td>分類C</td>
 			  <td>單位C</td>
-			  <td>1985</td>
-			  <td>王大明</td>
-			  <td>06-5468893</td>
 			  <td>1</td>
 			  <td>0</td>
 			  <td>2018/05/03 17:50</td>
