--- a/upload.html
+++ b/upload.html
@@ -186,7 +186,7 @@
 		<h4>類型</h4>
 		<div class="row">
 			<div class="col-md-12 row">
-				<div class="col-md-4 co-yellow">
+				<div class="col-md-4">
 					<label class="checkarea">食
 					  <input type="checkbox">
 					  <span class="checkmark"></span>
@@ -194,7 +194,7 @@
 				</div>
 				<div class="col-md-8">
 					<div class="row">
-						<div class="col-md-4 co-yellow-light">
+						<div class="col-md-4">
 							<label class="checkarea">魚乾
 							  <input type="checkbox">
 							  <span class="checkmark"></span>
