--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
 <link href="css/style.css" rel="stylesheet" type="text/css">
 
 </head>
-<body class="font-ch co-backgrang">
+<body class="font-ch co-backgroung">
 <nav class="navbar navbar-expand-lg navbar-dark co-drak mainHeader">
   <a class="navbar-brand" href="index.html">首頁</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
 			做為未來研提轉譯應用計畫的基礎。</p>
 		</div>
 	</div>
-	<div class="text-center col-sm-6"> 
+	<!-- <div class="text-center col-sm-6"> 
 		<div>
 			<h5>計畫主持人</h5>
 			<p>林寶安</p>
@@ -73,7 +73,23 @@
 			<p>許玉河</p>
 			<p>胡蘊玉</p>
 		</div>
-	</div>
+	</div> -->
+
+<div class="text-left col-sm-6 fineTuneInput"> 
+    <div>
+      <h4>計畫主持人</h4>
+      <h5>林寶安</h5>
+      <p><strong class="font-bigger">林寶安</strong> &middot; 國立澎湖科技大學通識教育中心教授</p>
+    </div>
+      <div>
+      <h4>協同主持人</h4>
+      <p><strong class="font-bigger">許玉河</strong> &middot; 澎湖縣隘門國民小學老師</p>
+      <p><strong class="font-bigger">呂政豪</strong> &middot; 國立澎湖科技大學觀光休閒系助理教授</p>
+      <p><strong class="font-bigger">李宗儒</strong> &middot; 國立澎湖科技大學資訊管理系助理教授</p>
+      <p><strong class="font-bigger">胡蘊玉</strong> &middot; 國立澎湖科技大學通識教育中心助理教授</p>
+    </div>
+  </div>
+
   </div>
 </div>
 <div class="footerArea container-fluid navbar-dark co-light">
